[package]
name = "leptos-multi-drag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-beta", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.0-beta", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.0-beta", features = ["csr", "nightly"] }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "main", version = "0.7.0-alpha" }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }
gloo-console = "0.2.3"
web-sys = { version = "0.3.64", features = ["ScrollIntoViewOptions", "ScrollBehavior"] }
mockall = "0.11.4"

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}
