[package]
name = "leptos-multi-drag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
leptos-use = "0.7"
log = "0.4"
gloo-net = { version = "0.4", features = ["http"] }
gloo-console = "0.3"
web-sys = { version = "0.3", features = ["ScrollIntoViewOptions", "ScrollBehavior"] }
mockall = "0.11"

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2" }
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
